# gno-ibc

./: .dockerignore  .editorconfig  .gitignore  .gitmodules  .gno-version  AGENT.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  ROLES.md  SECURITY_REVIEW.md  config.jsonc.xxx  flake.nix
.github/: .markdownlint.jsonc  issue-labeler.yml  labeler.yml  pr-title-labeler.yml
.github/scripts/: copy-linked-issue-labels.js
.github/workflows/: abi-fixtures.yml  docker-build.yml  docker-validate.yml  gno-coverage.yml  gno-version-bump.yml  (+8 more)
.helix/: languages.toml
docs/: ARCHITECTURE.md  README.md  access-management.md  ibc-native-gas.md  ibc-union-spec-comparison.md  tx-indexer.md  zkgm-batch-call-recv.md  zkgm-packet-send-guide.md
stdlibs/: go.mod  go.sum  native_gas_calibration.txt
tools/: README.md  gen-ibc-genesis-txs.py  gnokey-query-smoke.sh  run-v1-ibc-smoke-node-gnoland.sh  run-v1-ibc-smoke-node.sh  setup-stdlibs.py  test_setup_stdlibs.py
tools/abi-fixtures/: Cargo.toml  README.md
tools/abi-fixtures/src/: main.rs
tools/zkgm-fixtures/: Cargo.toml  README.md
tools/zkgm-fixtures/scripts/: gen-send-script.sh  send_template.gno  send_template.gno.tmpl
tools/zkgm-fixtures/scripts/happy/: ack_token_order_mm_escrow_voucher.gno  ack_token_order_refund.gno  open_channel_pair.gno  recv_batch.gno  recv_call.gno  recv_token_order.gno  recv_token_order_initialize.gno  send_batch.gno  send_call.gno  send_forward.gno  sendraw_token_order_args.gno  timeout_token_order_refund.gno
tools/zkgm-fixtures/src/: main.rs
(+1659 files in other folders)
