[package]
name = "zkgm-fixtures"
version = "0.0.0"
edition = "2021"
publish = false
description = "Generates ground-truth handler/dispatch end-to-end scenario fixtures (full ZkgmPacket + matching Ack pairs) for the gno zkgm handler tests, by reusing Union's `sol!` ucs03-zkgm definitions verbatim."

[dependencies]
alloy-primitives = "1.5"
alloy-sol-types = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4.3"
